# paullutkus.github.io

./: CHANGELOG.md  README.md  about.md  about.rst  chicago.csl  contact.markdown  index.html  personalsite.cabal  refs.bib  site.hs
css/: .default.css.swp  archive.css  archive_mobile.css  custom.css  default.css  formats.css  index.css  mobile.css  notes.css  post.css  syntax.css  tag.css  tmp_default.css
docs/: about.html  archive.html  bookNotes.html  contact.html  index.html  researchNotes.html
docs/css/: archive.css  archive_mobile.css  custom.css  default.css  formats.css  index.css  mobile.css  notes.css  post.css  syntax.css  tag.css  tmp_default.css
docs/posts/: 2023-01-07-first.html  2023-04-25-second.html  2023-06-04-boundary-point-detection.html  2023-06-20-joint-embedding-predictive-architecture.html  2023-06-21-default-mode-network.html
old/: default_site.hs
posts/: 2023-01-07-first.markdown  2023-04-25-second.markdown  2023-06-04-boundary-point-detection.markdown  2023-06-04-boundary-point-detection.md  2023-06-20-joint-embedding-predictive-architecture.md  2023-06-21-default-mode-network.markdown
templates/: about_base.html  about_default.html  archive.html  archive_base.html  archive_default.html  backup_archive_base.html  contact_base.html  contact_default.html  default.html  fixed_post_default.html  footer.html  hackyll_template_default.html  index.html  note.html  notes-list.html  notes.html  notes_base.html  post-list.html  post.html  post_base.html  post_default.html  tag_base.html  tmp_post_default.html  tufte_default.html
(+33 files in other folders)
