name:                personalsite
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/paullutkus/paullutkus.github.io
license:             BSD3
license-file:        LICENSE
author:              Paul Lutkus
maintainer:          paul.lutkus@gmail.com
copyright:           2023 Paul Lutkus
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

executable personalsite
  main-is:             site.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc,
                       filepath,
                       containers
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
